<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.a1.demo16.resource_string.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_information"
        android:id="@+id/textViewInfo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:textColor="#ee1818" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Format_Edt.ColorName"
        android:id="@+id/editTextName"
        android:layout_below="@+id/textViewInfo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:hint="@string/text_Name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Format_Edt"
        android:id="@+id/editTextEmail"
        android:hint="@string/text_Email"
        android:layout_below="@+id/editTextName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Format_Edt"
        android:id="@+id/editTextPhone"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentStart="true"
        android:hint="@string/text_Phone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Confirm"
        android:id="@+id/buttonCon"
        android:layout_below="@+id/editTextPhone"
        android:layout_alignStart="@+id/textViewInfo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewinfo2"
        android:layout_below="@+id/buttonCon"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />
</RelativeLayout>
